Fixed issue with horizontal scrollbar in view

--- a/view/scss/partials/_main.scss
+++ b/view/scss/partials/_main.scss
@@ -7,9 +7,8 @@
 
   @include respond-to("medium") {
     padding-bottom: 7em;
-    width: 100%;
     min-height: 100%;
-    padding-left: $sidebar-width;
+    margin-left: $sidebar-width;
   }
 }
 
